# python-graphql-client-example

./: README.md  example.env  pyproject.toml
python_graphql_client_example/client/: sync_client.py
python_graphql_client_example/transport/: base.py  request.py
scripts/: run.py
